@@ -6,6 +6,8 @@
   - Improved tests.
   - Fixed bug that prevented around_dispatch hooks from working correctly in
     embedded applications.
+  - Fixed small bug where "chunked" would not always be the default transfer
+    encoding.
 
 3.54  2012-11-01
   - Added next and previous methods to Mojo::DOM.
